# git-qui

./: .gitignore  .gitmodules  CMakeLists.txt  CommitForm.ui.qml  CommitPage.qml  DiffRow.qml  FileRow.qml  GEMINI.md  README.md  TreePage.qml  build.sh  de.feelx88.git-qui.desktop  de.feelx88.git-qui.metainfo.xml  de.feelx88.git-qui.metainfo.xml.in  de.feelx88.git-qui.yml  git-qui.pro  git-qui_de.ts  gitdiffline.cpp  gitdiffline.h  gitfile.cpp  gitfile.h  gitfilemodel.cpp  gitfilemodel.h  gitmanager.cpp  gitmanager.h  main.cpp  main.qml  qml.qrc  qpm.json  res.qrc  resources.qrc
.circleci/: config.yml
deploy/: .DirIcon  git-qui.desktop
deploy/installer/: config-linux.xml  config-mac.xml
include/: gitinterface.h
include/git/: agitmanager.h  gitcommit.h  gitdiffline.h  gitfile.h  gitmanager.h
include/git/git-bin/: gitbingitmanager.h
include/git/libgit2/: gitmanager.h  libgit2gitmanager.h
qml/: qtquickcontrols2.conf
qml/ui/: main.qml
qml/ui/components/: History.qml
qml/ui/default/: main.qml
src/: actiontag.hpp  cleanupdialog.cpp  cleanupdialog.hpp  cleanupdialog.ui  configurationkey.hpp  core.cpp  core.hpp  errortag.hpp  errortype.hpp  gitbranch.hpp  gitcommit.hpp  gitdiffline.cpp  gitdiffline.h  gitdiffline.hpp  gitfile.hpp  gitinterface.cpp  gitinterface.hpp  gitref.hpp  gittree.cpp  gittree.hpp  initialwindowconfiguration.cpp  initialwindowconfiguration.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  project.cpp  project.hpp  projectsettingsdialog.cpp  projectsettingsdialog.hpp  projectsettingsdialog.ui  qobjecthelpers.hpp  qtreewidgetutils.cpp  qtreewidgetutils.hpp  repository.cpp  repository.hpp  resetdialog.cpp  resetdialog.hpp  resetdialog.ui  toolbaractions.cpp  (+6 more)
src/components/: dockwidget.cpp  dockwidget.hpp
src/components/branchlist/: branchlist.cpp  branchlist.hpp  branchlist.ui
src/components/commit/: commit.cpp  commit.hpp  commit.ui
src/components/diffview/: diffview.cpp  diffview.h  diffview.hpp  diffview.ui
src/components/errorlog/: errorlog.cpp  errorlog.hpp  errorlog.ui
src/components/historyfiles/: historyfiles.cpp  historyfiles.h  historyfiles.ui
src/components/logview/: deletebranchdialog.cpp  deletebranchdialog.h  deletebranchdialog.ui  graphdelegate.cpp  graphdelegate.h  logview.cpp  logview.hpp  logview.ui  resetdialog.cpp  resetdialog.hpp  resetdialog.ui
src/components/repositoryfiles/: repositoryfileconfig.cpp  repositoryfileconfig.hpp  repositoryfileconfig.ui  repositoryfiles.cpp  repositoryfiles.hpp  repositoryfiles.ui  repositoryfilesconfig.cpp  repositoryfilesconfig.hpp  repositoryfilesconfig.ui
src/components/repositorylist/: repositorylist.cpp  repositorylist.h  repositorylist.hpp  repositorylist.ui
src/git/: agitmanager.cpp  gitcommit.cpp  gitdiffline.cpp  gitfile.cpp
src/git/git-bin/: gitbingitmanager.cpp
src/git/libgit2/: gitdiffline.cpp  gitfile.cpp  gitmanager.cpp  libgit2gitmanager.cpp
ui/: mainwindow.ui
ui/default/: main.qml  main.qmlc
ui/default/CommitPage/: CommitForm.ui.qml  CommitForm.ui.qmlc  CommitPage.qml  CommitPage.qmlc  DiffRow.qml  DiffRow.qmlc  FileRow.qml  FileRow.qmlc
ui/default/HistoryPage/: HistoryLine.qml  HistoryPage.qml
ui/default/TreePage/: HistoryLine.qml  TreePage.qml  TreePage.qmlc
